Bug 498917 - Crashes when money transfer is executed twice
Summary: Crashes when money transfer is executed twice
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: onlinebanking (other bugs)
Version First Reported In: 5.1.3
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-20 08:35 UTC by Paul Menzel
Modified: 2025-01-20 10:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Menzel 2025-01-20 08:35:08 UTC
With the AqBanking integration, create a money transfer (Überweisung) and execute it. After it’s done, do not confirm the dialog that it’s done, but click again on the still open dialog to execute the money transfer. KMyMoney crashes then.
Comment 1 Thomas Baumgart 2025-01-20 10:28:41 UTC
Git commit d117db7b738724b4387ec1cb57edf144ca876acb by Thomas Baumgart.
Committed on 20/01/2025 at 10:28.
Pushed by tbaumgart into branch 'master'.

Hide dialog to avoid further interaction with user
FIXED-IN: 5.2

M  +2    -0    kmymoney/plugins/views/onlinejoboutbox/konlinetransferform.cpp

https://invent.kde.org/office/kmymoney/-/commit/d117db7b738724b4387ec1cb57edf144ca876acb