Hide dialog to avoid further interaction with user

BUG: 498917
FIXED-IN: 5.2